@@ -22,6 +22,340 @@ extern "C" {
 
 #include "types.h"
 
+#if 0
+	/* Here is a prototype of the interface planned for .4.0 
+	 *
+	 */
+
+	/* tgdb
+	 * ----
+	 *
+	 *  This struct is a reference to a libtgdb instance.
+	 */
+	struct tgdb;
+
+    /* tgdb_initialize
+	 * ---------------
+	 *
+	 * This initializes a tgdb library instance. It starts up the debugger and 
+     * returns all file descriptors the client must select on.
+	 *
+	 * The client must call this function before any other function in the 
+	 * tgdb library.
+	 *
+	 * debugger
+	 * --------
+     *  The path to the desired debugger to use. If this is NULL, then just
+	 *  "gdb" is used.
+	 *
+	 * argc
+	 * ----
+	 *  The number of arguments to pass to the debugger
+	 *
+	 * argv
+	 * ----
+	 *  The arguments to pass to the debugger    
+     *
+     * debugger_fd
+     * -----------
+     *  The descriptor to the debugger's I/O
+     *
+     * inferior_fd
+     * -----------
+     *  The descriptor to the I/O of the program being debugged.
+     *
+     * readline_fd
+     * -----------
+     *  The descriptor to the readline I/O library
+     *
+     *  Returns
+     *  -------
+     *      NULL on error, A valid descriptor upon success
+     *
+	 */
+	struct tgdb* tgdb_initialize ( 
+		const char *debugger, 
+		int argc, char **argv,
+		int *debugger_fd, int *inferior_fd, int *readline_fd );
+
+    /* tgdb_send_debugger_char
+     * -----------------------
+     *
+     * This sends a byte of data to the debugger.
+     *
+     * tgdb
+     * ----
+     *  An instance of the tgdb library to operate on.
+     *
+     * c
+     * -
+     *  The character to pass to the debugger.
+     *
+     * Returns
+     * -------
+     *      0 on success or -1 on error
+     */
+    int tgdb_send_debugger_char ( struct tgdb *tgdb, char c );
+
+    /* tgdb_recv_readline_data
+     * -----------------------
+     *
+     * Data returned from the command line is returned here.
+     * 
+     * tgdb
+     * ----
+     *  An instance of the tgdb library to operate on.
+     *
+     * buf
+     * ---
+     *  The output of the debugger will be returned in this buffer.
+     *
+     * Returns
+     * ------- 
+     *  0 on success or -1 on error
+     */
+    int tgdb_recv_readline_data ( struct tgdb *tgdb, char *buf );
+
+    /* tgdb_send_inferior_char
+     * -----------------------
+     *
+     * This sends a byte of data to the program being debugged.
+     *
+     * tgdb
+     * ----
+     *  An instance of the tgdb library to operate on.
+     *
+     * c
+     * -
+     *  The character to pass to the program being debugged.
+     *
+     * Returns
+     * -------
+     *      0 on success or -1 on error
+     */
+    int tgdb_send_inferior_char ( struct tgdb *tgdb, char c );
+
+    /* tgdb_recv_debugger_data
+     * -----------------------
+     *
+     * Gets output from the debugger.
+     * Also, at this point, libtgdb returns a list of commands the client 
+     * can use.
+     * 
+     * tgdb
+     * ----
+     *  An instance of the tgdb library to operate on.
+     *
+     * buf
+     * ---
+     *  The output of the debugger will be returned in this buffer.
+     *
+     * n
+     * -
+     *  Tells libtgdb how large the buffer BUF is.
+     *
+     * q
+     * -
+     *  This is a queue of commands that libtgdb has generated by communicating
+     *  with the debugger.
+     *
+     * Returns
+     * ------- 
+     *  The amount of bytes in buf, or -1 on error
+     */
+    size_t tgdb_recv_debugger_data ( struct tgdb *tgdb, char *buf, size_t n, struct queue *q );
+
+    /* tgdb_recv_inferior_data
+     * -----------------------
+     *
+     * Gets the ouput from the program being debugged.
+     * 
+     * tgdb
+     * ----
+     *  An instance of the tgdb library to operate on.
+     *
+     * buf
+     * ---
+     *  The output of the program being debugged will be returned here.
+     *
+     * n
+     * -
+     *  Tells libtgdb how large the buffer BUF is.
+     *
+     * Returns
+     * ------- 
+     *  The amount of bytes in buf, or -1 on error
+     */
+    size_t tgdb_recv_inferior_data ( struct tgdb *tgdb, char *buf, size_t n );
+
+    /* These functions are for dealing with setting up the inferior program.
+     * 
+     */
+
+    /* tgdb_tty_new
+     * ------------
+     *
+     *  This allocates a new tty and tells the debugger to use it for I/O
+     *  with the program being debugged.
+     *
+     *  Whatever was left in the old tty is lost, the debugged program starts
+     *  with a new tty.
+     *
+     * tgdb
+     * ----
+     *  An instance of the tgdb library to operate on.
+     *
+     *  NOTE
+     *  ----
+     *   The return value only indicates whether the tty was allocated properly,
+     *   not whether the debugger accepted the tty, since this can only be determined 
+     *   when the debugger responds, not when the command is given.
+     *
+     * Returns 0 on success or -1 on error
+     */
+    int tgdb_tty_new ( struct tgdb *tgdb );
+
+    /* tgdb_tty_name
+     * -------------
+	 *
+	 * Gets the name of file that debugger is using for I/O with the program
+	 * being debugged.
+	 * 
+     * tgdb
+     * ----
+     *  An instance of the tgdb library to operate on.
+	 *
+	 * Returns
+	 * -------
+	 *  Name of tty or NULL on error.
+     *
+     */
+    const char *tgdb_tty_name ( struct tgdb *tgdb );
+
+	/* tgdb_get_inferiors_source_files
+	 * -------------------------------
+	 *
+ 	 *  Gets a list of source files that make up the program being debugged.
+	 *
+	 *  This function does not actually do anything but put a command in the 
+	 *  queue to be run when libtgdb is ready. When the libtgdb runs the
+	 *  command to get the inferior's source files, it will return 1 of 2
+	 *  things next time tgdb_recv is called.
+	 *
+ 	 *  If the function succeeds the gui will get back TGDB_UPDATE_SOURCE_FILES
+ 	 *  containing a list of all the source files. Otherwise the gui will get
+ 	 *  back TGDB_SOURCES_DENIED.
+	 *
+     * tgdb
+     * ----
+     *  An instance of the tgdb library to operate on.
+	 *
+	 *  Returns
+	 *  -------
+	 *   0 on success or -1 on error
+	 */
+	int tgdb_get_inferiors_source_files ( struct tgdb *tgdb );
+
+	/* tgdb_get_absolute_path
+	 * ----------------------
+	 *
+	 *  This gets the absolute path from FILE. FILE must have been returned
+	 *  from libtgdb as a relative path. libtgdb has a mechanism for getting the
+	 *  absolute path from the debugger given the relative path.
+	 *
+ 	 * If this functions succeeds TGDB_ABSOLUTE_SOURCE_ACCEPTED will be returned.
+ 	 * Otherwise, TGDB_ABSOLUTE_SOURCE_DENIED gets returned.
+	 *
+     * tgdb
+     * ----
+     *  An instance of the tgdb library to operate on.
+	 *
+	 *  Returns
+	 *  -------
+	 *   0 on success or -1 on error
+	 */
+	int tgdb_get_absolute_path ( const char *file );
+
+	/* tgdb_err_msg
+	 * ------------
+	 *
+	 *  If a function returns an error, this can be called to report more
+	 *  about the type of error, or the error message itself.
+	 *
+     * tgdb
+     * ----
+     *  An instance of the tgdb library to operate on.
+	 *
+	 * Returns
+	 * -------
+	 *  Error Message or NULL on error
+	 */
+	char *tgdb_err_msg ( struct tgdb *tgdb );
+
+	/* tgdb_shutdown
+	 * -------------
+	 *
+	 *  This will terminate a libtgdb session. No functions should be called on
+	 *  the tgdb context passed into this function after this call.
+	 *
+     * tgdb
+     * ----
+     *  An instance of the tgdb library to operate on.
+	 *
+	 *  Returns
+	 *  -------
+	 *   0 on success or -1 on error
+	 */
+	int tgdb_shutdown ( struct tgdb *tgdb );
+
+	/* tgdb_run_debugger_command
+	 * -------------------------
+	 *
+	 * This tells libtgdb to run a command through the debugger.
+	 *
+     * tgdb
+     * ----
+     *  An instance of the tgdb library to operate on.
+	 *
+	 * c
+	 * -
+	 *  This is the command that libtgdb should run through the debugger.
+	 *
+	 * Returns
+	 * -------
+	 *   0 on success or -1 on error
+	 */
+	int tgdb_run_debugger_command ( struct tgdb *tgdb, enum tgdb_command c );
+
+	/* tgdb_set_breakpoint_file_line
+	 * -----------------------------
+	 *  
+	 *  Modify's a breakpoint.
+	 *
+     * tgdb
+     * ----
+     *  An instance of the tgdb library to operate on.
+	 *
+	 *  file
+	 *  ----
+	 *   	The file to set the breakpoint in.
+	 *
+	 *  line
+	 *  ----
+	 *  	The line in FILE to set the breakpoint in.
+	 *
+	 *  modify
+	 *  ------
+	 *  	Determines what the user wants to do with the breakpoint.
+	 *
+	 * Returns
+	 * -------
+	 *   0 on success or -1 on error
+	 */
+	int tgdb_modify_breakpoint ( struct tgdb *tgdb, const char *file, int line, enum tgdb_breakpoint_action b );
+
+#endif
+
 /* tgdb_init: This starts up gdb and returns a fd to gdb's output and to
  *            the childs output. Both fd's should only be used by the library. 
  *            They are only returned so that the gui programmer can do some 
